--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,6 @@ jobs:
 
     - name: Run tests
       run: zig build test
+
+    - name: Run xev tests
+      run: cd vendor/libxev && zig build test
