--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,8 @@ jobs:
 
     - name: Build
       run: zig build
+      timeout-minutes: 5
 
     - name: Run tests
       run: zig build test
+      timeout-minutes: 5
