--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,7 @@ jobs:
     - name: Run tests
       run: zig build test
       timeout-minutes: 5
+
+    - name: Run xev tests
+      run: cd vendor/libxev && zig build test
+      timeout-minutes: 5
