Add separate build steps for examples and benchmarks
- Create 'zig build examples' step to build all examples
- Create 'zig build benchmarks' step to build all benchmarks
- Examples and benchmarks are no longer built by default
- Remove yield-only benchmark from build configuration
- Update CI to explicitly build examples and benchmarks

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,14 @@ jobs:
       run: zig build
       timeout-minutes: 5
 
+    - name: Build examples
+      run: zig build examples
+      timeout-minutes: 5
+
+    - name: Build benchmarks
+      run: zig build benchmarks
+      timeout-minutes: 5
+
     - name: Run tests
       run: zig build test
       timeout-minutes: 5
