--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
       timeout-minutes: 5
 
     - name: Run tests
-      run: zig build test
+      run: TEST_FILTER="UDP: basic send and receive" zig build test
       timeout-minutes: 5
 
     - name: Run xev tests
