--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,19 @@ on:
 jobs:
   test:
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - os: ubuntu-latest
+            target: x86_64-linux
+          - os: ubuntu-latest
+            target: aarch64-linux
+            qemu_binary: qemu-aarch64-static
+            xev_backend: epoll
+          - os: macos-latest
+            target: native
+          - os: windows-latest
+            target: native
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -23,21 +34,38 @@ jobs:
         version: 0.15.2
 
     - name: Build
-      run: zig build
+      run: zig build ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }} ${{ matrix.xev_backend && format('-Dxev_backend={0}', matrix.xev_backend) || '' }}
+      timeout-minutes: 5
+
+    - name: Build tests
+      run: zig build build-tests ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }} ${{ matrix.xev_backend && format('-Dxev_backend={0}', matrix.xev_backend) || '' }}
       timeout-minutes: 5
 
     - name: Build examples
-      run: zig build examples
+      run: zig build examples ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }} ${{ matrix.xev_backend && format('-Dxev_backend={0}', matrix.xev_backend) || '' }}
       timeout-minutes: 5
 
     - name: Build benchmarks
-      run: zig build benchmarks
+      run: zig build benchmarks ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }} ${{ matrix.xev_backend && format('-Dxev_backend={0}', matrix.xev_backend) || '' }}
       timeout-minutes: 5
 
-    - name: Run tests
-      run: zig build test
+    - name: Run tests (native)
+      if: ${{ !matrix.qemu_binary }}
+      run: ./zig-out/bin/test
       timeout-minutes: 5
 
-    - name: Run xev tests
+    - name: Run xev tests (native only)
+      if: ${{ !matrix.qemu_binary }}
       run: cd vendor/libxev && zig build test
       timeout-minutes: 5
+
+    - name: Install QEMU
+      if: matrix.qemu_binary
+      run: |
+        sudo apt-get update -q -y
+        sudo apt-get install -q -y qemu-user-static
+
+    - name: Run tests (QEMU)
+      if: matrix.qemu_binary
+      run: ${{ matrix.qemu_binary }} env TEST_FILTER="sleep" ./zig-out/bin/test
+      timeout-minutes: 10
