Add RISC-V 64-bit architecture support
This adds complete RISC-V 64-bit support to the coroutines implementation:

- Context structure with sp, fp, and pc registers
- Context initialization in initContext()
- Full context switching with save/restore of all registers
- Entry point (coroEntry) with correct stack layout handling
- CI workflow updates to test RISC-V builds using QEMU

The implementation follows the same patterns as existing x86_64 and
aarch64 architectures, with proper register preservation and calling
convention adherence.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,10 @@ jobs:
             target: aarch64-linux
             qemu_binary: qemu-aarch64-static
             xev_backend: epoll
+          - os: ubuntu-latest
+            target: riscv64-linux
+            qemu_binary: qemu-riscv64-static
+            xev_backend: epoll
           - os: macos-latest
             target: native
           - os: windows-latest
