--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,18 +14,28 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-linux
+            run: native
           - os: ubuntu-latest
             target: aarch64-linux
+            run: qemu
             qemu_binary: qemu-aarch64-static
             xev_backend: epoll
           - os: ubuntu-latest
             target: riscv64-linux
+            run: qemu
             qemu_binary: qemu-riscv64-static
             xev_backend: epoll
+          - os: ubuntu-latest
+            target: x86_64-freebsd
+            run: vm
+            vm_type: freebsd
+            xev_backend: kqueue
           - os: macos-latest
             target: native
+            run: native
           - os: windows-latest
             target: native
+            run: native
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -54,24 +64,32 @@ jobs:
       timeout-minutes: 5
 
     - name: Run tests (native)
-      if: ${{ !matrix.qemu_binary }}
+      if: matrix.run == 'native'
       run: ./zig-out/bin/test
       timeout-minutes: 5
 
     - name: Run xev tests (native only)
-      if: ${{ !matrix.qemu_binary }}
+      if: matrix.run == 'native'
       run: cd vendor/libxev && zig build test
       timeout-minutes: 5
 
     - name: Install QEMU
-      if: matrix.qemu_binary
+      if: matrix.run == 'qemu'
       run: |
         sudo apt-get update -q -y
         sudo apt-get install -q -y qemu-user-static
 
     - name: Run tests (QEMU)
-      if: matrix.qemu_binary
+      if: matrix.run == 'qemu'
       run: ${{ matrix.qemu_binary }} ./zig-out/bin/test
       timeout-minutes: 10
       env:
         TEST_FILTER: event.tests.test|coroutines.test
+
+    - name: Test in FreeBSD VM
+      if: matrix.run == 'vm' && matrix.vm_type == 'freebsd'
+      uses: vmactions/freebsd-vm@v1
+      with:
+        usesh: true
+        run: |
+          env TEST_FILTER="event.tests.test|coroutines.test" ./zig-out/bin/test
