--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,27 +12,40 @@ jobs:
       fail-fast: false
       matrix:
         include:
+
           - os: ubuntu-latest
-            target: x86_64-linux
             run: native
+            target: x86_64-linux
+            backend: epoll
+
+          - os: ubuntu-latest
+            run: native
+            target: x86_64-linux
+            backend: poll
+
           - os: ubuntu-latest
             target: aarch64-linux
             run: qemu
             qemu_binary: qemu-aarch64-static
+
           - os: ubuntu-latest
             target: riscv64-linux
             run: qemu
             qemu_binary: qemu-riscv64-static
+
           - os: ubuntu-latest
             target: x86_64-freebsd
             run: vm
             vm_type: freebsd
+
           - os: macos-latest
             target: native
             run: native
+
           - os: windows-latest
             target: native
             run: native
+
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -45,9 +58,10 @@ jobs:
         version: 0.15.2
 
     - name: Build
-      run: |
-        zig build \
-          -Dinstall-tests \
+      run: >
+        zig build
+          -Dinstall-tests
+          ${{ matrix.backend && format('-Dbackend={0}', matrix.backend) || '' }}
           ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }}
       timeout-minutes: 5
 
