Fix backend selection

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,10 +59,9 @@ jobs:
 
     - name: Build
       run: >
-        zig build
-          -Dinstall-tests
-          ${{ matrix.backend && format('-Dbackend={0}', matrix.backend) || '' }}
-          ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }}
+        zig build -Dinstall-tests
+        ${{ matrix.backend && format('-Dbackend={0}', matrix.backend) || '' }}
+        ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }}
       timeout-minutes: 5
 
     - name: Run tests (native)
