Initial version of kqueue backend (#3)
* Add NetBSD CI run

* Add OpenBSD CI run

* Revert "Add OpenBSD CI run"

This reverts commit 10699ed422b87a5c3befd5c28f8dc3dc828c2eba.

* Initial version of kqueue backend

* Add custom EV_ERROR

* Sync using sshfs

* Fix errno handling and upgrade NetBSD CI to 10.1

- Fix double errno evaluation in AsyncImpl.init() that could report wrong error
- Upgrade NetBSD CI to version 10.1 for EVFILT_USER support (added in NetBSD 10.0)

* Revert "Sync using sshfs"

This reverts commit b2cc6be4a79723f721965abfc67a04e2b787917e.

* Build BSD targets natively in VMs instead of cross-compiling

Changes the CI workflow to download Zig binaries and build natively
on FreeBSD and NetBSD VMs instead of cross-compiling from Ubuntu.
This ensures tests run against the native BSD libc rather than Zig's
libc, which was causing behavioral differences.

* Revert "Build BSD targets natively in VMs instead of cross-compiling"

This reverts commit 450f9cd7ab9674f0834f82ab7a1e9ca1ccc3c295.

* Add diagnostic logging for kqueue constants

Logs the exact numeric values of EVFILT_USER, EV.* and NOTE.*
constants, Kevent structure size and field offsets, and detailed
error information when kevent() fails. This will help identify
differences between Zig's libc and native BSD libc.

* Fix bitcast compilation error for EVFILT.USER

* Fix NOTE_TRIGGER constant value for BSD systems

std.c incorrectly defines NOTE_TRIGGER as 0x08000000, but BSD
systems actually use 0x01000000. This was causing errno 9 (EBADF)
when trying to trigger EVFILT_USER events with cross-compiled binaries.

Added correct NOTE_TRIGGER constant and diagnostic logging to compare
std.c values with correct BSD values.

* Fix EVFILT_USER constant value for BSD systems

std.c incorrectly defines EVFILT.USER as 1 for NetBSD, but it should
be 8. The value 1 is actually EVFILT_WRITE. This was causing errno 9
(EBADF) when trying to register EVFILT_USER events.

Also fixed NOTE_TRIGGER which was incorrect

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,11 @@ jobs:
             run: vm
             vm_type: freebsd
 
+          - os: ubuntu-latest
+            target: x86_64-netbsd
+            run: vm
+            vm_type: netbsd
+
           - os: macos-latest
             target: native
             run: native
@@ -84,4 +89,11 @@ jobs:
       if: matrix.run == 'vm' && matrix.vm_type == 'freebsd'
       uses: vmactions/freebsd-vm@v1
       with:
+        run: ./zig-out/bin/test
+
+    - name: Run tests (NetBSD VM)
+      if: matrix.run == 'vm' && matrix.vm_type == 'netbsd'
+      uses: vmactions/netbsd-vm@v1
+      with:
+        release: '10.1'
         run: ./zig-out/bin/test
