--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,11 +17,9 @@ jobs:
           - os: ubuntu-latest
             target: aarch64-linux
             qemu_binary: qemu-aarch64-static
-            xev_backend: epoll
           - os: ubuntu-latest
             target: riscv64-linux
             qemu_binary: qemu-riscv64-static
-            xev_backend: epoll
           - os: macos-latest
             target: native
           - os: windows-latest
@@ -38,29 +36,24 @@ jobs:
         version: 0.15.2
 
     - name: Build
-      run: zig build ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }} ${{ matrix.xev_backend && format('-Dxev_backend={0}', matrix.xev_backend) || '' }}
+      run: zig build ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }}
       timeout-minutes: 5
 
     - name: Build tests
-      run: zig build build-tests ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }} ${{ matrix.xev_backend && format('-Dxev_backend={0}', matrix.xev_backend) || '' }}
+      run: zig build build-tests ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }}
       timeout-minutes: 5
 
     - name: Build examples
-      run: zig build examples ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }} ${{ matrix.xev_backend && format('-Dxev_backend={0}', matrix.xev_backend) || '' }}
+      run: zig build examples ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }}
       timeout-minutes: 5
 
     - name: Build benchmarks
-      run: zig build benchmarks ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }} ${{ matrix.xev_backend && format('-Dxev_backend={0}', matrix.xev_backend) || '' }}
+      run: zig build benchmarks ${{ matrix.target != 'native' && format('-Dtarget={0}', matrix.target) || '' }}
       timeout-minutes: 5
 
     - name: Run tests (native)
       if: ${{ !matrix.qemu_binary }}
       run: ./zig-out/bin/test
-      timeout-minutes: 5
-
-    - name: Run xev tests (native only)
-      if: ${{ !matrix.qemu_binary }}
-      run: cd vendor/libxev && zig build test
       timeout-minutes: 5
 
     - name: Install QEMU
