--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,14 +13,13 @@ jobs:
       matrix:
         include:
 
-          - os: ubuntu-latest
+          - os: ubuntu-24.04
             run: native
-            target: x86_64-linux
+            target: native
 
-          - os: ubuntu-latest
-            target: aarch64-linux
-            run: qemu
-            qemu_binary: qemu-aarch64-static
+          - os: ubuntu-24.04-arm
+            run: native
+            target: native
 
           - os: ubuntu-latest
             target: riscv64-linux
@@ -42,6 +41,10 @@ jobs:
             run: native
 
           - os: windows-latest
+            target: native
+            run: native
+
+          - os: windows-11-arm
             target: native
             run: native
 
