Add IOCP backend (#48)
* Add IOCP backend skeleton with SharedState refcounting

Implements bare-bones IOCP backend for Windows with thread-safe
SharedState that allows multiple loops to share a single IOCP handle.

- Add iocp backend to BackendType enum
- Set iocp as default backend for Windows
- Implement SharedState with mutex and refcounting
- Implement init/deinit with acquire/release semantics
- Implement poll() using GetQueuedCompletionStatusEx
- Stub wake/submit/cancel with panic for now

The IOCP handle is created on first loop init and destroyed when
the last loop is deinitialized, enabling one loop per thread pattern.

* Add extension function loading with per-family caching

Implements lazy loading of Winsock extension functions (AcceptEx,
ConnectEx) with thread-safe caching per address family.

- Add ExtensionFunctions struct with AcceptEx/ConnectEx pointers
- Add extension_cache (HashMap<family, ExtensionFunctions>)
- Implement getExtensions() for lazy loading with caching
- Load functions via WSAIoctl(SIO_GET_EXTENSION_FUNCTION_POINTER)
- Cache key is address family (u16) since functions are STREAM-only
- Thread-safe access via SharedState mutex

* Implement IOCP backend basic network operations

- Add Completion.internal field with backend-specific CompletionData
- Implement net_open: create socket and associate with IOCP handle
- Implement net_connect: use ConnectEx with pre-binding requirement
- Implement net_accept: use AcceptEx with address buffer
- Implement poll() completion processing using @fieldParentPtr
- Add NetAcceptData for accept-specific address buffer storage

All completions now have OVERLAPPED in Completion.internal, with
net_accept getting additional buffer space in its per-operation internal
field. Processing uses @fieldParentPtr to navigate from OVERLAPPED back
to the Completion struct.

* Implement wake() for IOCP using QueueUserAPC with alertable waits

Each Backend stores a duplicated thread handle obtained during init().
wake

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Build and test
       shell: bash
       run: |
-        for backend in poll; do
+        for backend in iocp poll; do
           echo "Building and testing with backend: $backend"
           zig build -Dinstall-tests -Dbackend=$backend
           ./zig-out/bin/test
