Squashed 'src/lib/aio/' changes from 9b60218..19671f9
19671f9 Fix windows build
b1b0521 Run on zig master

git-subtree-dir: src/lib/aio
git-subtree-split: 19671f96733bb40b03a8b57d05953bdc2677dc0b

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: 0.15.2
+        version: master
 
     - name: Build and test
       shell: bash
@@ -38,7 +38,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: 0.15.2
+        version: master
 
     - name: Build and test
       shell: bash
@@ -59,7 +59,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: 0.15.2
+        version: master
 
     - name: Build and test
       shell: bash
@@ -81,7 +81,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: 0.15.2
+        version: master
 
     - name: Build tests
       shell: bash
@@ -109,7 +109,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: 0.15.2
+        version: master
 
     - name: Build tests
       shell: bash
