--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - os: ubuntu-arm
           - os: ubuntu-latest
           - os: macos-latest
           - os: windows-latest
