--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-arm
-          - os: ubuntu-latest
+          - os: ubuntu-24.04
+          - os: ubuntu-24.04-arm
           - os: macos-latest
           - os: windows-latest
     runs-on: ${{ matrix.os }}
