--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,6 @@ on:
     tags:
   pull_request:
 
-env:
-  TEST_FILTER: "Timeout"
-
 jobs:
   test:
     strategy:
@@ -35,7 +32,7 @@ jobs:
       timeout-minutes: 5
 
     - name: Build tests
-      run: zig build build-tests --release=safe
+      run: zig build build-tests
       timeout-minutes: 5
 
     - name: Build examples
