Add std.Io section to mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
     - Files: files.md
     - Synchronization: sync.md
     - Signals: signals.md
+    - std.Io: stdio.md
   - Reference:
     - API Documentation: apidocs/
   - Project:
