--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,11 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
+          - os: ubuntu-24.04-arm
           - os: macos-latest
           - os: macos-15-intel
           - os: windows-latest
+          - os: windows-11-arm
     runs-on: ${{ matrix.os }}
 
     steps:
